# DocumentReader

./: .gitignore  .gitmodules  ARCHITECTURE.md  DOCUMENT_EXPERT_CONTRACT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROGRESS.md  QUICKSTART.md  QUICKSTART_OLD.md  README.md  config.yaml  pyproject.toml  requirements.txt  setup.py
.github/scripts/: check_model_updates.py
.github/workflows/: ml-model-updates.yml
data/: README.md
desktop-gui/: README.md  __init__.py  main.py
scripts/: example_usage.py  process_documents.py  process_engineering_plans.py  process_expert.py  summarize_processed_json.py
src/api/: __init__.py  main.py
src/document_reader/: __init__.py  agent_hub.py  document_processor.py
src/document_reader/expert/: __init__.py  classification.py  contracts.py  extractors.py  pipeline.py  preprocess.py  quality.py  tables.py
src/document_reader/layout/: __init__.py  detector.py
src/document_reader/ocr/: __init__.py  paddle_reader.py  tesseract_reader.py
src/document_reader/utils/: __init__.py  file_utils.py  image_utils.py
src/document_reader/vision/: __init__.py  vl_model.py
tests/: __init__.py  test_api.py  test_document_processor.py  test_indot_identification.py  test_ocr.py  test_table_extraction.py
web-ui/: README.md  eslint.config.mjs  index.html  package-lock.json  package.json
web-ui/src/: App.css  App.tsx  index.css
