[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roadway-doc-engine"
version = "0.1.0"
description = "A specialized document processing system designed to parse roadway construction plans (PDFs and CAD exports)"
readme = "README.md"
authors = [
    {name = "DocumentReader Team", email = "team@example.com"},
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
]
keywords = ["document-processing", "ocr", "roadway-plans", "engineering-documents", "pdf-parsing", "cad-exports"]

dependencies = [
    "numpy>=1.21.0",
    "Pillow>=9.0.0",
    "opencv-python>=4.5.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.0",
    "PyMuPDF>=1.23.0",
    "PyPDF2>=3.0.0",
    "PyYAML>=6.0",
    "python-dotenv>=0.19.0",
    "scikit-image>=0.19.0",
    "pandas>=1.3.0",
    # FastAPI for REST API layer
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    # For async operations
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
paddleocr = [
    "paddleocr>=2.6.0",
    "paddlepaddle>=2.4.0",
]
vision = [
    "openai>=1.0.0",
    "anthropic>=0.7.0",
]
layout = [
    "layoutparser>=0.3.4",
    "torch>=1.13.0",
    "torchvision>=0.14.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "httpx>=0.25.0",  # For testing FastAPI endpoints
]
docs = [
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
]
all = [
    "paddleocr>=2.6.0",
    "paddlepaddle>=2.4.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "layoutparser>=0.3.4",
    "torch>=1.13.0",
    "torchvision>=0.14.0",
]

[project.urls]
Homepage = "https://github.com/derek-betz/DocumentReader"
Repository = "https://github.com/derek-betz/DocumentReader"
Documentation = "https://github.com/derek-betz/DocumentReader#readme"
"Bug Tracker" = "https://github.com/derek-betz/DocumentReader/issues"

[project.scripts]
process-documents = "scripts.process_documents:main"
process-engineering-plans = "scripts.process_engineering_plans:main"
roadway-doc-engine-api = "src.api.main:start_server"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
document_reader = ["*.yaml", "*.json"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
